Fix overdramatic spacing on blurb

--- a/assets/styles/sass/employer-events.scss
+++ b/assets/styles/sass/employer-events.scss
@@ -32,6 +32,9 @@
   padding: 5rem;
   text-align: center;
 }
+.employer-events-wrapper > p {
+  padding-top: 0;
+}
 .employer-events {
   display: flex;
   flex-wrap: wrap;
